# codex-island-waveshare

./: .gitignore  AGENTS.md  CODEX_IMPLEMENTATION_SPEC.md  LICENSES.md  README.md
bridge/: README.md  pyproject.toml
bridge/src/codex_island_bridge/: __init__.py  ble_transport.py  cache.py  cli.py  codex_pet.py  codex_sessions.py  codex_usage.py  config.py  distributed_radar.py  models.py  protocol.py  radar_history.py  service.py
bridge/src/codex_island_bridge/radar/: __init__.py  authorized_api.py  base.py  html_provider.py  mock_provider.py
bridge/tests/: test_ble_transport.py  test_codex_pet.py  test_codex_sessions.py  test_codex_usage.py  test_distributed_radar.py  test_distributed_radar_service.py  test_pet_asset_builder.py  test_protocol.py  test_radar_html.py  test_radar_service.py  test_service.py
bridge/tests/fixtures/: codexradar_minimal.html
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
firmware/main/input/: button_logic.cpp  button_logic.hpp  input_manager.cpp  input_manager.hpp  orientation_logic.cpp  orientation_logic.hpp  orientation_manager.cpp  orientation_manager.hpp
firmware/main/model/: app_state.cpp  app_state.hpp
firmware/main/power/: display_link_policy.hpp  power_manager.cpp  power_manager.hpp
firmware/main/protocol/: protocol.cpp  protocol.hpp
firmware/main/storage/: state_cache.cpp  state_cache.hpp
firmware/main/transport/: ble_nus.cpp  ble_nus.hpp  link_watchdog.hpp
firmware/main/ui/: page_distributed_radar.cpp  page_distributed_radar.hpp  page_pet.cpp  page_pet.hpp  page_radar.cpp  page_radar.hpp  page_status.cpp  page_status.hpp  page_usage.cpp  page_usage.hpp  ui_app.cpp  ui_app.hpp  ui_theme.cpp  ui_theme.hpp
firmware/main/ui/fonts/: jetbrains_mono_14.c  jetbrains_mono_20.c  jetbrains_mono_24.c  programmer_fonts.hpp
firmware/main/ui/pet/: pet_asset.cpp  pet_asset.hpp
firmware/main/ui/widgets/: gradient_arc.cpp  gradient_arc.hpp  status_icons.cpp  status_icons.hpp
launchd/: com.local.codex-island-bridge.plist.template
reference/: LOCKFILE.md
scripts/: backup_flash.sh  bootstrap_macos.sh  build_firmware.sh  (+7 more)
(+7 files in other folders)
