[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-island-bridge"
version = "0.3.0"
description = "macOS data and BLE bridge for Codex Island"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "bleak>=0.22",
  "certifi>=2025.1",
  "Pillow>=11.0",
  "platformdirs>=4.3",
  "requests>=2.32",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
]

[project.scripts]
codex-island-bridge = "codex_island_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
